--- a/arch/arm64/configs/usu_vs986_defconfig
+++ b/arch/arm64/configs/usu_vs986_defconfig
@@ -36,6 +36,47 @@ CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_EXTABLE_SORT=y
 
 #
+# Halium configuration
+#
+CONFIG_DUMMY=n
+CONFIG_IPC_NS=y
+CONFIG_CGROUP_PERF=y
+CONFIG_DEVTMPFS=y
+CONFIG_BT_HCIUART=y
+CONFIG_RTC_DRV_CMOS=y
+CONFIG_FHANDLE=y
+CONFIG_SCHED_DEBUG=y
+CONFIG_DEVTMPFS_MOUNT=y
+CONFIG_VT=y
+CONFIG_CGROUP_MEM_RES_CTLR_KMEM=y
+CONFIG_NET_CLS_CGROUP=y
+CONFIG_LBDAF=y
+CONFIG_PID_NS=y
+CONFIG_BT_HCIUART_H4=y
+CONFIG_NETPRIO_CGROUP=y
+CONFIG_SECURITY_SELINUX_BOOTPARAM=y
+CONFIG_CHECKPOINT_RESTORE=y
+CONFIG_NETFILTER_NETLINK_ACCT=m
+CONFIG_WATCHDOG_NOWAYOUT=y
+CONFIG_UTS_NS=y
+CONFIG_CGROUP_DEVICE=y
+CONFIG_NETFILTER_XT_MATCH_NFACCT=m
+CONFIG_FANOTIFY=y
+CONFIG_CGROUP_MEM_RES_CTLR=y
+CONFIG_AUTOFS4_FS=y
+CONFIG_SYSVIPC=y
+CONFIG_CGROUP_MEM_RES_CTLR_SWAP=y
+CONFIG_BLK_CGROUP=y
+CONFIG_IKCONFIG_PROC=y
+#CONFIG_AUDIT=n
+#CONFIG_ANDROID_PARANOID_NETWORK=n
+CONFIG_PRONTO_WLAN=y
+CONFIG_SYSFS_DEPRECATED=n
+CONFIG_FW_LOADER_USER_HELPER=!
+CONFIG_DMIID=y
+CONFIG_F2FS_FS_SECURITY=y
+
+#
 # steadfasterX kicks LG's ass stuff (UsU)
 #
 CONFIG_CMDLINE=""
@@ -65,10 +106,7 @@ CONFIG_LOCALVERSION=""
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
-# CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
-# CONFIG_FHANDLE is not set
-CONFIG_AUDIT=y
 # CONFIG_AUDIT_LOGINUID_IMMUTABLE is not set
 
 #
@@ -123,28 +161,21 @@ CONFIG_GENERIC_SCHED_CLOCK=y
 CONFIG_CGROUPS=y
 # CONFIG_CGROUP_DEBUG is not set
 CONFIG_CGROUP_FREEZER=y
-# CONFIG_CGROUP_DEVICE is not set
 # CONFIG_CPUSETS is not set
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
 # CONFIG_MEMCG is not set
-# CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
 # CONFIG_CFS_BANDWIDTH is not set
 CONFIG_RT_GROUP_SCHED=y
-# CONFIG_BLK_CGROUP is not set
 CONFIG_SCHED_HMP=y
-# CONFIG_CHECKPOINT_RESTORE is not set
 CONFIG_NAMESPACES=y
-# CONFIG_UTS_NS is not set
 # CONFIG_USER_NS is not set
-# CONFIG_PID_NS is not set
 CONFIG_NET_NS=y
 CONFIG_UIDGID_CONVERTED=y
 # CONFIG_UIDGID_STRICT_TYPE_CHECKS is not set
 # CONFIG_SCHED_AUTOGROUP is not set
-# CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_INITRAMFS_SOURCE=""
@@ -603,7 +634,6 @@ CONFIG_DEFAULT_MPTCP_PM="default"
 # CONFIG_LGP_DATA_TCPIP_MPTCP_CHECKSUM_ENABLE is not set
 # CONFIG_LGP_DATA_TCPIP_MPTCP_SYN_RETRY_1 is not set
 # CONFIG_LGP_DATA_TCPIP_MPTCP is not set
-CONFIG_ANDROID_PARANOID_NETWORK=y
 CONFIG_NET_ACTIVITY_STATS=y
 CONFIG_NETWORK_SECMARK=y
 # CONFIG_NETWORK_PHY_TIMESTAMPING is not set
@@ -616,7 +646,6 @@ CONFIG_BRIDGE_NETFILTER=y
 # Core Netfilter Configuration
 #
 CONFIG_NETFILTER_NETLINK=y
-# CONFIG_NETFILTER_NETLINK_ACCT is not set
 CONFIG_NETFILTER_NETLINK_QUEUE=y
 CONFIG_NETFILTER_NETLINK_LOG=y
 CONFIG_NF_CONNTRACK=y
@@ -721,7 +750,6 @@ CONFIG_NETFILTER_XT_MATCH_LIMIT=y
 CONFIG_NETFILTER_XT_MATCH_MAC=y
 CONFIG_NETFILTER_XT_MATCH_MARK=y
 CONFIG_NETFILTER_XT_MATCH_MULTIPORT=y
-# CONFIG_NETFILTER_XT_MATCH_NFACCT is not set
 # CONFIG_NETFILTER_XT_MATCH_OSF is not set
 # CONFIG_NETFILTER_XT_MATCH_OWNER is not set
 CONFIG_NETFILTER_XT_MATCH_POLICY=y
@@ -887,7 +915,6 @@ CONFIG_CLS_U32_MARK=y
 # CONFIG_NET_CLS_RSVP is not set
 # CONFIG_NET_CLS_RSVP6 is not set
 CONFIG_NET_CLS_FLOW=y
-# CONFIG_NET_CLS_CGROUP is not set
 CONFIG_NET_EMATCH=y
 CONFIG_NET_EMATCH_STACK=32
 # CONFIG_NET_EMATCH_CMP is not set
@@ -920,7 +947,6 @@ CONFIG_RMNET_DATA_FC=y
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_XPS=y
-# CONFIG_NETPRIO_CGROUP is not set
 CONFIG_BQL=y
 CONFIG_SOCKEV_NLMCAST=y
 
@@ -945,7 +971,6 @@ CONFIG_BT_HIDP=y
 #
 # CONFIG_BT_HCIBTUSB is not set
 # CONFIG_BT_HCIBTSDIO is not set
-# CONFIG_BT_HCIUART is not set
 # CONFIG_BT_HCIBCM203X is not set
 # CONFIG_BT_HCIBPA10X is not set
 # CONFIG_BT_HCIBFUSB is not set
@@ -1015,13 +1040,11 @@ CONFIG_IPC_ROUTER_SECURITY=y
 # Generic Driver Options
 #
 CONFIG_UEVENT_HELPER_PATH=""
-# CONFIG_DEVTMPFS is not set
 CONFIG_STANDALONE=y
 CONFIG_PREVENT_FIRMWARE_BUILD=y
 CONFIG_FW_LOADER=y
 CONFIG_FIRMWARE_IN_KERNEL=y
 CONFIG_EXTRA_FIRMWARE=""
-CONFIG_FW_LOADER_USER_HELPER=y
 # CONFIG_DEBUG_DRIVER is not set
 # CONFIG_DEBUG_DEVRES is not set
 # CONFIG_SYS_HYPERVISOR is not set
@@ -1298,7 +1321,6 @@ CONFIG_DM_REQ_CRYPT=y
 CONFIG_NETDEVICES=y
 CONFIG_NET_CORE=y
 # CONFIG_BONDING is not set
-CONFIG_DUMMY=y
 # CONFIG_EQUALIZER is not set
 # CONFIG_NET_FC is not set
 CONFIG_MII=y
@@ -1817,7 +1839,6 @@ CONFIG_GAMEPORT=y
 # Character devices
 #
 CONFIG_TTY=y
-# CONFIG_VT is not set
 CONFIG_UNIX98_PTYS=y
 # CONFIG_DEVPTS_MULTIPLE_INSTANCES is not set
 # CONFIG_LEGACY_PTYS is not set
@@ -3950,10 +3971,8 @@ CONFIG_FILE_LOCKING=y
 CONFIG_FSNOTIFY=y
 CONFIG_DNOTIFY=y
 CONFIG_INOTIFY_USER=y
-# CONFIG_FANOTIFY is not set
 # CONFIG_QUOTA is not set
 # CONFIG_QUOTACTL is not set
-# CONFIG_AUTOFS4_FS is not set
 CONFIG_FUSE_FS=y
 # CONFIG_CUSE is not set
 
@@ -4120,7 +4139,6 @@ CONFIG_PANIC_ON_OOPS=y
 CONFIG_PANIC_ON_OOPS_VALUE=0
 # CONFIG_PANIC_ON_RECURSIVE_FAULT is not set
 # CONFIG_DETECT_HUNG_TASK is not set
-# CONFIG_SCHED_DEBUG is not set
 # CONFIG_PANIC_ON_RT_THROTTLING is not set
 CONFIG_SCHEDSTATS=y
 CONFIG_TIMER_STATS=y
@@ -4249,7 +4267,6 @@ CONFIG_SECURITY_NETWORK=y
 # CONFIG_SECURITY_PATH is not set
 CONFIG_LSM_MMAP_MIN_ADDR=4096
 CONFIG_SECURITY_SELINUX=y
-# CONFIG_SECURITY_SELINUX_BOOTPARAM is not set
 # CONFIG_SECURITY_SELINUX_DISABLE is not set
 CONFIG_SECURITY_SELINUX_DEVELOP=y
 CONFIG_SECURITY_SELINUX_AVC_STATS=y
