--- a/arch/arm64/configs/usu_vs986_defconfig
+++ b/arch/arm64/configs/usu_vs986_defconfig
@@ -54,7 +54,7 @@ CONFIG_LBDAF=y
 CONFIG_PID_NS=y
 CONFIG_BT_HCIUART_H4=y
 CONFIG_NETPRIO_CGROUP=y
-CONFIG_SECURITY_SELINUX_BOOTPARAM=y
+# CONFIG_SECURITY_SELINUX_BOOTPARAM in not set
 CONFIG_CHECKPOINT_RESTORE=y
 CONFIG_NETFILTER_NETLINK_ACCT=m
 CONFIG_WATCHDOG_NOWAYOUT=y
@@ -68,7 +68,7 @@ CONFIG_SYSVIPC=y
 CONFIG_CGROUP_MEM_RES_CTLR_SWAP=y
 CONFIG_BLK_CGROUP=y
 CONFIG_IKCONFIG_PROC=y
-#CONFIG_AUDIT=n
+CONFIG_AUDIT=y
 #CONFIG_ANDROID_PARANOID_NETWORK=n
 CONFIG_PRONTO_WLAN=y
 CONFIG_SYSFS_DEPRECATED=n
@@ -4266,8 +4266,8 @@ CONFIG_SECURITY_NETWORK=y
 # CONFIG_SECURITY_NETWORK_XFRM is not set
 # CONFIG_SECURITY_PATH is not set
 CONFIG_LSM_MMAP_MIN_ADDR=4096
-CONFIG_SECURITY_SELINUX=y
-# CONFIG_SECURITY_SELINUX_DISABLE is not set
+# CONFIG_SECURITY_SELINUX is not set
+CONFIG_SECURITY_SELINUX_DISABLE=y
 CONFIG_SECURITY_SELINUX_DEVELOP=y
 CONFIG_SECURITY_SELINUX_AVC_STATS=y
 CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1
@@ -4278,9 +4278,9 @@ CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1
 # CONFIG_SECURITY_YAMA is not set
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
-CONFIG_DEFAULT_SECURITY_SELINUX=y
+# CONFIG_DEFAULT_SECURITY_SELINUX is not set
 # CONFIG_DEFAULT_SECURITY_DAC is not set
-CONFIG_DEFAULT_SECURITY="selinux"
+# CONFIG_DEFAULT_SECURITY is not set
 CONFIG_CRYPTO=y
 CONFIG_WIREGUARD=y
 #
